monitoring: add Grafana alert channel for contacting Brad via email
Use Grafana's [notifier provisioning system] to always add a
notification channel to email Brad.

`settings.uploadImage` is not documented in the provisioning config
but is present in the `notifiers/base.go` code:
https://github.com/grafana/grafana/blob/v8.1.1/pkg/services/alerting/notifiers/base.go#L33-L34

[notifier provisioning system]: https://grafana.com/docs/grafana/v8.1/administration/provisioning/#alert-notification-channels

--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -6,6 +6,7 @@ metadata:
 resources:
   - github.com/bfritz/homelab-apps/vendor/kube-prometheus
   - ./prometheus_extra/additional-scrape-configs.yaml
+  - ./grafana-notifiers-brad.yaml
 
 patches:
   - patch: |-
@@ -34,3 +35,11 @@ patches:
                 value: "true"
               - name: GF_SMTP_HOST
                 value: mail.fewerhassles.com:587
+              volumeMounts:
+              - mountPath: /etc/grafana/provisioning/notifiers
+                name: grafana-notifiers
+                readOnly: false
+            volumes:
+            - name: grafana-notifiers
+              configMap:
+                name: grafana-notifiers-brad
