monitoring: update `kube-prometheus` to `main` branch for Grafana 8.2.x
Then bump from 8.2.2 to 8.2.3 via kustomization.

`kube-prometheus` version changes:

```diff
git diff 864ca1e..31d86b7 -- jsonnet/kube-prometheus/versions.json
diff --git a/jsonnet/kube-prometheus/versions.json b/jsonnet/kube-prometheus/versions.json
index 6094607..fa96fd4 100644
--- a/jsonnet/kube-prometheus/versions.json
+++ b/jsonnet/kube-prometheus/versions.json
@@ -1,12 +1,12 @@
 {
-  "alertmanager": "0.22.2",
+  "alertmanager": "0.23.0",
   "blackboxExporter": "0.19.0",
-  "grafana": "8.1.1",
-  "kubeStateMetrics": "2.1.1",
+  "grafana": "8.2.2",
+  "kubeStateMetrics": "2.2.3",
   "nodeExporter": "1.2.2",
-  "prometheus": "2.29.1",
-  "prometheusAdapter": "0.9.0",
-  "prometheusOperator": "0.49.0",
+  "prometheus": "2.30.3",
+  "prometheusAdapter": "0.9.1",
+  "prometheusOperator": "0.51.2",
   "kubeRbacProxy": "0.11.0",
   "configmapReload": "0.5.0"
 }
```

--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
 images:
   - name: grafana/grafana
     newTag:
-    digest: sha256:f9139cfb93732c7b2e65c2c3d7fa240139501551d83bd5b94e5d6f2ccfa9cd7c # 8.1.7 for linux/amd64
+    digest: sha256:d6325d20f78cd306b4f8a9d0057ea7022a34d273553034d3d871040c3db37fc3 # 8.2.3 for linux/amd64
 
 patches:
   - patch: |-
@@ -40,19 +40,14 @@ patches:
                 value: "false"
               - name: GF_CHECK_FOR_UPDATES
                 value: "false"
+              - name: GF_UNIFIED_ALERTING_ENABLED
+                value: "true"
+              - name: GF_ALERTING_ENABLED # legacy alerts
+                value: "false"
               - name: GF_SMTP_ENABLED
                 value: "true"
               - name: GF_SMTP_HOST
                 value: mail.fewerhassles.com:587
-              # For Grafana 8.2.x
-              # - name: GF_UNIFIED_ALERTING_ENABLED
-              #   value: "true"
-              # - name: GF_ALERTING_ENABLED # legacy alerts
-              #   value: "false"
-              #
-              # For Grafana 8.1.x
-              - name: GF_FEATURE_TOGGLES_ENABLE
-                value: "ngalert"
               volumeMounts:
               - mountPath: /etc/grafana/provisioning/notifiers
                 name: grafana-notifiers
