--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -42,6 +42,8 @@ patches:
                 value: "false"
               - name: GF_UNIFIED_ALERTING_ENABLED
                 value: "true"
+              - name: GF_PLUGINS_ENABLE_ALPHA
+                value: "true" # for AlertManager data source https://grafana.com/docs/grafana/latest/datasources/alertmanager/ @ v8.2
               - name: GF_ALERTING_ENABLED # legacy alerts
                 value: "false"
               - name: GF_SMTP_ENABLED
