--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - github.com/bfritz/homelab-apps/vendor/kube-prometheus
   - ./prometheus_extra/additional-scrape-configs.yaml
   - ./grafana-notifiers-brad.yaml
+  - ./alertmanager-email-brad.yaml
 
 images:
   - name: grafana/grafana
