monitoring: configure Alertmanager to notice the new notifier

--- a/apps/monitoring/alertmanager-email-brad.yaml
+++ b/apps/monitoring/alertmanager-email-brad.yaml
@@ -5,6 +5,8 @@ kind: AlertmanagerConfig
 metadata:
   name: alertmanager-email-brad
   namespace: monitoring
+  labels:
+    alertmanagerConfig: active
 spec:
   route:
       groupBy: ['job']
