--- a/apps/monitoring/alertmanager-email-brad.yaml
+++ b/apps/monitoring/alertmanager-email-brad.yaml
@@ -9,13 +9,14 @@ metadata:
     alertmanagerConfig: active
 spec:
   route:
-      groupBy: ['job']
+      groupBy:
+      - job
       groupWait: 30s
       groupInterval: 5m
       repeatInterval: 2h
       receiver: 'email-brad'
   receivers:
-  - name: 'email-brad'
+  - name: EmailBrad
     emailConfigs:
     - to: "Brad <brad-k8s-alerts-9DrY@fewerhassles.com>"
       smarthost: "mail.fewerhassles.com:587"
