cert-manager: rename config file to use dashes instead of underscores

--- a/apps/cert-manager/kustomization.yaml
+++ b/apps/cert-manager/kustomization.yaml
@@ -5,4 +5,4 @@ metadata:
 
 resources:
   - https://github.com/jetstack/cert-manager/releases/download/v1.6.0/cert-manager.yaml
-  - ./issuer_self_signed.yaml
+  - ./issuer-self-signed.yaml
