apps: enable automated sync and namespace creation for all apps in the set
Documentation for Argo CD sync options:
https://argo-cd.readthedocs.io/en/stable/user-guide/sync-options/

--- a/apps.yaml
+++ b/apps.yaml
@@ -22,3 +22,7 @@ spec:
         repoURL: https://github.com/bfritz/homelab-apps.git
         targetRevision: HEAD
         path: '{{path}}'
+      syncPolicy:
+        automated: {}
+        syncOptions:
+        - CreateNamespace=true
