--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./alertmanager-ingress.yaml
   - ./grafana-ingress.yaml
   - ./grafana-notifiers-brad.yaml
+  - ./probes-key-public-ips.yaml
   - ./prometheus-ingress.yaml
   - ./prometheus_extra/additional-scrape-configs.yaml
 
