monitoring: enable ICMP probes from the blackbox exporter
There are two parts to enabling ICMP probes:

1. Add the `icmp` module to the blackbox exporter configuration.
2. Adjust the `securityContext` for the `blackbox-exporter` container
   to allow sending pings.

For (1), override the default kube-prometheus ConfigMap and add the
icmp module.

For (2), patch the Deployment `securityContext` values to run as root
with only the `NET_RAW` capability.

References:

* https://github.com/prometheus-operator/kube-prometheus/blob/v0.9.0/jsonnet/kube-prometheus/components/blackbox-exporter.libsonnet#L169-L175
* https://github.com/prometheus-operator/kube-prometheus/blob/v0.9.0/docs/blackbox-exporter.md?plain=1#L43
* https://github.com/prometheus-operator/kube-prometheus/pull/778#discussion_r521955739

--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -75,3 +75,26 @@ patches:
             - name: grafana-notifiers
               configMap:
                 name: grafana-notifiers-brad
+
+  - path: blackbox-exporter-configuration.yaml
+    target:
+      name: blackbox-exporter-configuration
+      kind: ConfigMap
+
+  - patch: |-
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: blackbox-exporter
+        namespace: monitoring
+      spec:
+        template:
+          spec:
+            containers:
+            - name: blackbox-exporter
+              securityContext:
+                runAsUser: 0 # to override the default of 65534 (nobody)
+                runAsNonRoot: false
+                capabilities:
+                  drop: ["ALL"]
+                  add: ["NET_RAW"]
