monitoring: add separate app for the the custom Grafana dashboards
Otherwise, `apps/monitoring/kustomization.yaml` would probably need to
explicitly import each of the dashboard ConfigMaps.  Besides,
`app-monitoring` is already chunky so keeping the new dashboards in a
separate apps should make things easier to review in the Argo CD UI.

--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -7,8 +7,8 @@ resources:
   - github.com/bfritz/homelab-apps/vendor/kube-prometheus
   - ./alertmanager-email-brad.yaml
   - ./alertmanager-ingress.yaml
+  - ./grafana-dashboards-app.yaml
   - ./grafana-ingress.yaml
-  - ./grafana-monitoring-dashboards-namespace.yaml
   - ./grafana-monitoring-dashboards-view-role.yaml
   - ./grafana-notifiers-brad.yaml
   - ./grafana-rolebinding.yaml
