--- a/apps/cert-manager/kustomization.yaml
+++ b/apps/cert-manager/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
-  name: monitoring
+  name: cert-manager
 
 resources:
   - https://github.com/jetstack/cert-manager/releases/download/v1.6.0/cert-manager.yaml
