--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - ./grafana-rolebinding.yaml
   - ./probes-key-public-ips.yaml
   - ./prometheus-ingress.yaml
+  - ./prometheus-storage.yaml
   - ./prometheus_extra/additional-scrape-configs.yaml
 
 images:
@@ -130,3 +131,26 @@ patches:
     target:
       name: grafana-dashboards
       kind: ConfigMap
+
+  # configure persistent storage for prometheus
+  - patch: |-
+      apiVersion: monitoring.coreos.com/v1
+      kind: Prometheus
+      metadata:
+        name: k8s
+        namespace: monitoring
+      spec:
+        retention: "30d"
+        storage:
+          volumeClaimTemplate:
+            apiVersion: v1
+            kind: PersistentVolumeClaim
+            spec:
+              accessModes:
+              - ReadWriteOnce
+              resources:
+                requests:
+                  storage: "50Gi"
+              selector:
+                matchLabels:
+                  app: prometheus
