monitoring: fix alertmanager email config
Either a per-config `from` or a global from value is required in the
Alertmanager configuration.

--- a/apps/monitoring/alertmanager-email-brad.yaml
+++ b/apps/monitoring/alertmanager-email-brad.yaml
@@ -19,4 +19,5 @@ spec:
   - name: EmailBrad
     emailConfigs:
     - to: "Brad <brad-k8s-alerts-9DrY@fewerhassles.com>"
+      from: Alertmanager <alertmanager@alertmanager.k8s>
       smarthost: "mail.fewerhassles.com:587"
