monitoring: add ICMP ping probes for a few internal hosts

--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./grafana-monitoring-dashboards-view-role.yaml
   - ./grafana-notifiers-brad.yaml
   - ./grafana-rolebinding.yaml
+  - ./probes-internal-ips.yaml
   - ./probes-key-public-ips.yaml
   - ./prometheus-ingress.yaml
   - ./prometheus-storage.yaml
