monitoring: create dedicated TLS cert for Alertmanager
Fixes copy pasta in #9.

--- a/apps/monitoring/alertmanager-ingress.yaml
+++ b/apps/monitoring/alertmanager-ingress.yaml
@@ -9,7 +9,7 @@ metadata:
   namespace: monitoring
 spec:
   tls:
-  - secretName: grafana-tls
+  - secretName: alertmanager-tls
     hosts:
     - alertmanager.k8s
   rules:
