haproxy-ingress, metalb: set 172.22.18.32 as "private" ingress
To prepare for ingress that will be exposed publicly, mark
172.22.18.32/27 as a private IP pool and use `haproxy-private` as the
ingress class for ingress through 172.22.18.32.

--- a/apps/haproxy-ingress/values.yaml
+++ b/apps/haproxy-ingress/values.yaml
@@ -1,4 +1,7 @@
 controller:
+  ingressClass: haproxy-private
+  service:
+    loadBalancerIP: 172.22.18.32
   stats:
     enabled: true
     port: 1936
