haproxy-ingress, metalb: add "public" HAProxy ingress at 172.22.18.64
Run second instance of haproxy-ingress controller that will accept
incoming traffic from the Internet.

--- a/apps/haproxy-ingress/Chart.yaml
+++ b/apps/haproxy-ingress/Chart.yaml
@@ -9,5 +9,10 @@ appVersion: "v0.13.4"
 
 dependencies:
 - name: haproxy-ingress
+  alias: haproxy-ingress-private
+  version: 0.13.4
+  repository: https://haproxy-ingress.github.io/charts
+- name: haproxy-ingress
+  alias: haproxy-ingress-public
   version: 0.13.4
   repository: https://haproxy-ingress.github.io/charts
