--- a/apps/haproxy-ingress/values.yaml
+++ b/apps/haproxy-ingress/values.yaml
@@ -1,8 +1,24 @@
-haproxy-ingress:
+haproxy-ingress-private:
   controller:
     ingressClass: haproxy-private
     service:
       loadBalancerIP: 172.22.18.32
+    stats:
+      enabled: true
+      port: 1936
+    metrics:
+      enabled: true
+      embedded: true
+    serviceMonitor:
+      enabled: true
+    logs: # access logs
+      enabled: true
+
+haproxy-ingress-public:
+  controller:
+    ingressClass: haproxy-public
+    service:
+      loadBalancerIP: 172.22.18.64
     stats:
       enabled: true
       port: 1936
