monitoring: use random initial password for gotify admin
Retrieve password with:

    kubectl -n monitoring get secret gotify-admin -ojson | jq -r '.data.password' | base64 -d

--- a/apps/monitoring/gotify-deployment.yaml
+++ b/apps/monitoring/gotify-deployment.yaml
@@ -27,6 +27,11 @@ spec:
           value: "data/gotify.db"
         - name: GOTIFY_REGISTRATION
           value: "false"
+        - name: GOTIFY_DEFAULTUSER_PASS
+          valueFrom:
+            secretKeyRef:
+              name: gotify-admin
+              key: password
         ports:
         - containerPort: 8080
           name: http
