--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - github.com/bfritz/homelab-apps/vendor/kube-prometheus
   - ./alertmanager-email-brad.yaml
   - ./alertmanager-ingress.yaml
+  - ./gotify-admin-password.yaml
   - ./gotify-deployment.yaml
   - ./gotify-ingress.yaml
   - ./gotify-service.yaml
