database: use pg_dumpall to take hourly backups of pg12
Every hour take a logical backup of pg12 and store the SQL
on the NAS server.  Dump filename includes the current hour
so there are 24 backup "slots".

--- a/apps/database/templates/storage.yaml
+++ b/apps/database/templates/storage.yaml
@@ -33,3 +33,33 @@ spec:
           operator: In
           values:
           - "true"
+---
+# NAS volume for backups
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pg12-backup-claim
+spec:
+  volumeName: pg12-backup
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 20Gi
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pg12-backup
+  labels:
+    app: pg12
+spec:
+  capacity:
+    storage: 20Gi
+  accessModes:
+    - ReadWriteOnce
+  nfs:
+    server: nas
+    path: "/storage/k8s/nfs/pg12/backup"
+  mountOptions:
+    - nfsvers=4.2
