database: use preset random password for pg12
Previously the `bitnami/postgresql` helm template was
picking a random password.  That password ends up on the
persistent data volume and can fall out-of-sync in
circumstances where helm resets the k8s secret.  When
that happens, the backup jobs will fail because their
password from the k8s secret is no longer honored.

Avoid the out-of-sync condition by just generating a
password and manually creating the k8s secret.

--- a/apps/database/templates/backup_cronjob.yaml
+++ b/apps/database/templates/backup_cronjob.yaml
@@ -27,7 +27,7 @@ spec:
             - name: PGPASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: app-database-pg12
+                  name: pg12-creds
                   key: postgresql-password
             volumeMounts:
               - name: pg12-backup
