cert-manager: add internal CA Issuer
CA can be used to issue database (and other) server certs as well as
client certs for database users.

Certificates in `issuer-cluster-ca-signing-secret.yaml` created with
existing [step] CA root certificate:

    # key and CSR for dedicated intermediate for k8s
    step certificate create "bfritz k8s Intermediate CA" intermediate.csr intermediate_ca_key --csr --no-password --insecure

    # sign request for new intermediate
    step certificate sign --profile intermediate-ca intermediate.csr ~/.step/certs/root_ca.crt  ~/.step/secrets/root_ca_key \
      > intermediate_ca.crt

    # create SealedSecret in `cert-manager` namespace
    kubectl create secret generic -n cert-manager cluster-ca-signing-certs --dry-run=client -o json \
    --from-file=tls.crt=intermediate_ca_chain.crt \
    --from-file=tls.key=intermediate_ca_key \
    | kubeseal --format yaml \
    > issuer-cluster-ca-signing-secret.yaml

    mv -i issuer-cluster-ca-signing-secret.yaml apps/cert-manager/

    # cleanup
    rm intermediate.csr intermediate_ca*

[step]: https://smallstep.com/cli/

--- a/apps/cert-manager/kustomization.yaml
+++ b/apps/cert-manager/kustomization.yaml
@@ -6,3 +6,5 @@ metadata:
 resources:
   - https://github.com/jetstack/cert-manager/releases/download/v1.6.1/cert-manager.yaml
   - ./issuer-self-signed.yaml
+  - ./issuer-cluster-ca.yaml
+  - ./issuer-cluster-ca-signing-secret.yaml
