--- a/apps/cert-manager/issuer-cluster-ca.yaml
+++ b/apps/cert-manager/issuer-cluster-ca.yaml
@@ -1,6 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: self-signed
+  name: cluster-ca
 spec:
-  selfSigned: {}
+  ca:
+    secretName: cluster-ca-signing-certs
