database: use cert-manager and internal CA for pg12 certs
Replace one-time, adhoc certificate generation for the PostgreSQL 12
server with cert-manager `Certificate` resource.  The new cert is still
self-signed, but will auto-renew every ~90 days.

Next commit will re-introduce the `postgres` client certificate.

--- a/apps/database/values.yaml
+++ b/apps/database/values.yaml
@@ -17,10 +17,10 @@ pg12:
 
   tls:
     enabled: true
-    certificatesSecret: pg12-certs
+    certificatesSecret: pg12-server-cert
     certCAFilename: "ca.crt"
-    certFilename: "pg12.crt"
-    certKeyFilename: "pg12.key"
+    certFilename: "tls.crt"
+    certKeyFilename: "tls.key"
 
   volumePermissions:
     enabled: true  # needed to ensure correct permission for certificate files in `tls` section above
