monitoring: add PostgreSQL datasource for pg12 in Grafana
Create a `grafana` certificate and use it to connect to the
`metrics` database on the pg12 server.  Had to repeat the
same init container workaround for
https://github.com/kubernetes/kubernetes/issues/57923 as used
in #63.

Still working on the database setup and it will be documented
in `apps/database/README.md` (or automated) later.  For now,
using:

    -- base privileges
    \c postgres
    revoke connect on database postgres from PUBLIC;

    -- metrics database privileges
    create database metrics owner postgres;
    \c metrics
    revoke connect on database postgres from PUBLIC;
    revoke create on schema public from PUBLIC;

    create role metrics_readonly with password null nologin inherit;
    grant connect on database metrics to metrics_readonly;

    create role grafana password null login inherit;
    grant metrics_readonly to grafana;
    commit;

--- a/apps/database/templates/pg12-server-certificate.yaml
+++ b/apps/database/templates/pg12-server-certificate.yaml
@@ -8,6 +8,7 @@ spec:
   commonName: pg12
   dnsNames:
     - pg12
+    - app-database-pg12.database.svc
   privateKey:
     algorithm: ECDSA
   usages:
