monitoring: configure Alertmanager explicitly
Fix `InfoInhibitor` alertmanager spam by building `alertmanager.yaml`
explicitly rather than via `AlertmanagerConfig` resources.  Might have
been just "holding it wrong", but it was hard to grok the generated
config with `AlertmanagerConfig` in place.

Also https://github.com/prometheus-operator/prometheus-operator/issues/3737
and a couple of related PRs were dormant for an extended period and might
have been blockers to achieving the desired config via `AlertmanagerConfig`.
Better to keep it simple.

This is a follow-up to #52.

--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -5,7 +5,6 @@ metadata:
 
 resources:
   - github.com/bfritz/homelab-apps/vendor/kube-prometheus
-  - ./alertmanager-email-brad.yaml
   - ./alertmanager-ingress.yaml
   - ./gotify-admin-password.yaml
   - ./gotify-deployment.yaml
@@ -56,6 +55,11 @@ patches:
           matchLabels:
             alertmanagerConfig: active
         externalUrl: https://alertmanager.k8s
+
+  - path: alertmanager-config-secret.yaml
+    target:
+      name: alertmanager-main
+      kind: Secret
 
   - patch: |-
       apiVersion: apps/v1
