gitlab-ce: mirror cluster-ca root cert into gitlab-ce secret
Configure GitLab components to trust the root CA used by the
`cluster-ca` issuer.

Used the following commands to mirror the certificate into the
`gitlab-ce` namespace:

    kubectl get secret -n cert-manager cluster-ca-signing-certs -o json \
        | jq-r '.data["tls.crt"]' \
        | base64 -d \
        | awk 'split_after==1{n++;split_after=0} /-----END CERTIFICATE-----/ {split_after=1} {print >"/tmp/cert" n ".pem"}'

    kubectl create secret generic -n gitlab-ce cluster-ca-root-cert \
        --dry-run=client -o json \
        --from-file=cluster-ca-root.crt=/tmp/cert1.pem \
        | kubeseal --format yaml \
        > apps/gitlab-ce/templates/gitlab-cluster-ca-root-cert-secret.yaml

--- a/apps/gitlab-ce/values.yaml
+++ b/apps/gitlab-ce/values.yaml
@@ -24,6 +24,9 @@ gitlab:
       PGSSLCERT: /etc/gitlab/postgres/ssl/client-certificate.pem
       PGSSLKEY: /etc/gitlab/postgres/ssl/client-key.pem
       PGSSLROOTCERT: /etc/gitlab/postgres/ssl/server-ca.pem
+    certificates:
+      customCAs:
+      - secret: cluster-ca-root-cert
   certmanager:
     install: false
   gitlab-runner:
