--- a/apps/music/mopidy-service-snapcast-stream.yaml
+++ b/apps/music/mopidy-service-snapcast-stream.yaml
@@ -1,15 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    metallb.universe.tf/address-pool: private-pool
+    metallb.universe.tf/allow-shared-ip: private-main
   labels:
     app.kubernetes.io/name: mopidy
   name: mopidy-snapcast-stream
 spec:
-  type: NodePort
+  type: LoadBalancer
+  loadBalancerIP: 172.22.18.32
   ports:
   - name: snapcast-stream
-    port: 1704
+    port: 31704
     targetPort: snapcast-stream
-    nodePort: 31704
   selector:
     app.kubernetes.io/name: mopidy
