--- a/apps/music/kustomization.yaml
+++ b/apps/music/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
   - ./mopidy-service-snapcast-stream.yaml
   - ./mopidy-service-snapcast-control.yaml
   - ./mopidy-ingress.yaml
+  - ./music-library-volume.yaml
