--- a/apps/music/kustomization.yaml
+++ b/apps/music/kustomization.yaml
@@ -11,3 +11,4 @@ resources:
   - ./mopidy-service-snapcast-control.yaml
   - ./mopidy-ingress.yaml
   - ./music-library-volume.yaml
+  - ./podcast-opml-volume.yaml
