monitoring: send email when alerts are resolved

--- a/apps/monitoring/alertmanager-config-secret.yaml
+++ b/apps/monitoring/alertmanager-config-secret.yaml
@@ -51,11 +51,13 @@ stringData:
       - to: Brad <brad-k8s-alerts-77rC@fewerhassles.com>
         from: Alertmanager <alertmanager@alertmanager.k8s>
         smarthost: mail.fewerhassles.com:587
+        send_resolved: true
     - name: Watchdog
     - name: Critical
       email_configs:
       - to: Brad <brad-k8s-alerts-77rC@fewerhassles.com>
         from: Alertmanager <alertmanager@alertmanager.k8s>
         smarthost: mail.fewerhassles.com:587
+        send_resolved: true
     - name: "null"
     templates: []
