monitoring: drop the `.gwifi` domain suffix when scraping ruuvi-bridge

--- a/apps/monitoring/prometheus_extra/prometheus-additional.yaml
+++ b/apps/monitoring/prometheus_extra/prometheus-additional.yaml
@@ -5,7 +5,7 @@
   - targets:
     - rpi-fw:9100
     - k0s-controller.k8s:9100
-    - ruuvi-bridge.gwifi:9100
+    - ruuvi-bridge:9100
     labels:
       job: node-exporter
       k8s: "false"
