sealed-secrets: remove in Sealed Secrets in favor of Mozilla SOPS
Use [Mozilla SOPS] instead of the Bitnami Sealed Secrets operator.  The
cluster is regularly rebuilt from git and it is easy to lose the
auto-generated private key and cert used for Sealed Secrets decryption.
Without it, we cannot access the sealed secrets and they all need to be
regenerated.

Should work better to just keep the SOPS decryption key on a development
machine and `kubectl apply` our few non-ephemeral secrets during the
bootstrap process.

Added `apply_encrypted_sops_secrets` make target to assist with
decryption and application of SOPS-encrypted secrets.  It assumes

    export SOPS_AGE_KEY=$(age -d [path_to_encrypted_age_key])

has already been run.

[Mozilla SOPS]: https://github.com/mozilla/sops#readme

--- a/apps/database/Makefile
+++ b/apps/database/Makefile
@@ -1,12 +1,29 @@
+# For decrypting the sops `.enc` files, populate key with:
+#
+#     export SOPS_AGE_KEY=$(age -d [path_to_passphrase_protected_sops_key])
+
+
 TWO_YEARS_IN_H = $(shell echo $$((2 * 24 * 365)))
 ONE_MONTH_IN_H = $(shell echo $$((31 * 24)))
 
-.PHONY: all
-all: templates/pg12-creds.yaml
+.PHONY: \
+	show-postgresql-password \
+	__end
 
-templates/pg12-creds.yaml:
-	$(info Use `kubectl -n database get secret pg12-creds -ojson | jq -r '.data."postgresql-password"' | base64 -d` to retrieve password.)
+show-postgresql-password:
+	ifndef KUBECONFIG
+	$(error KUBECONFIG is not set)
+	endif
+	@kubectl -n database get secret pg12-creds -ojson | jq -r '.data."postgresql-password"' | base64 -d
+
+pg12-creds.yaml.sensitive:
 	openssl rand -base64 15 \
-		| kubectl create secret generic -n database pg12-creds --dry-run=client --from-file=postgresql-password=/dev/stdin -o json \
-		| kubeseal --format yaml \
-		> templates/pg12-creds.yaml
+		| kubectl create secret generic -n database pg12-creds --dry-run=client --from-file=postgresql-password=/dev/stdin -o yaml \
+		> pg12-creds.yaml.sensitive
+
+pg12-creds.yaml.enc: pg12-creds.yaml.sensitive
+	sops --encrypt --age="age16a2rje3pq2hns5g2dnd0nnwxu5rkam4885mk2hfcr0fs2v8444dqqjrtl9" --encrypted-regex '^data' \
+		pg12-creds.yaml.sensitive \
+		> pg12-creds.yaml.enc
+
+__end:
