--- a/apps/monitoring/prometheus_extra/prometheus-additional.yaml
+++ b/apps/monitoring/prometheus_extra/prometheus-additional.yaml
@@ -6,6 +6,7 @@
     - rpi-fw:9100
     - k0s-controller.k8s:9100
     - ruuvi-bridge:9100
+    - snapcast-client:9100
     labels:
       job: node-exporter
       k8s: "false"
