monitoring: add `nas` to list of external node-exporter hosts

--- a/apps/monitoring/prometheus_extra/prometheus-additional.yaml
+++ b/apps/monitoring/prometheus_extra/prometheus-additional.yaml
@@ -5,6 +5,7 @@
   - targets:
     - rpi-fw:9100
     - k0s-controller.k8s:9100
+    - nas:9100
     - ruuvi-bridge:9100
     - snapcast-client:9100
     labels:
