monitoring: replace `boxer` with `mail.fewerhassles.com` and also scrape postfix metrics

--- a/apps/monitoring/prometheus_extra/prometheus-additional.yaml
+++ b/apps/monitoring/prometheus_extra/prometheus-additional.yaml
@@ -4,7 +4,8 @@
   static_configs:
   - targets:
     - rpi-fw:9100
-    - boxer:9100
+    - mail.fewerhassles.com:9100
+    - mail.fewerhassles.com:9154
     - k0s-controller.k8s:9100
     - nas:9100
     - ruuvi-bridge:9100
