--- a/apps/extra/apps.yaml
+++ b/apps/extra/apps.yaml
@@ -12,7 +12,7 @@ spec:
       - path: apps/*
   template:
     metadata:
-      name: 'app-{{path.basename}}'
+      name: 'extra-{{path.basename}}'
     spec:
       project: default
       destination:
@@ -24,5 +24,3 @@ spec:
         path: '{{path}}'
       syncPolicy:
         automated: {}
-        syncOptions:
-        - CreateNamespace=true
