--- a/apps/metallb-system/kustomization.yaml
+++ b/apps/metallb-system/kustomization.yaml
@@ -4,5 +4,6 @@ metadata:
   name: metallb
 
 resources:
-  - github.com/metallb/metallb/manifests?ref=dbe1a20bb820e2b99337fd658ee40a2bbb53df42 # v0.12.1 tag
-  - ./config.yaml
+  - github.com/metallb/metallb/config/native?ref=ddd605cc5e9d7b207d28f5ebffa990c00bbd5407 # v0.13.5 tag
+  - ./private-pool.yaml
+  - ./public-pool.yaml
